--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -9,11 +9,20 @@
   <link rel="stylesheet" href="/pagefind/pagefind-ui.css">
   <link rel="icon" href="/favicon.ico">
 </head>
-<body class="bg-manual-50 text-manual-800 min-h-screen flex flex-col">
+<body class="manual-body text-manual-800 min-h-screen flex flex-col font-serif">
   {% include "partials/header.njk" %}
 
-  <main class="flex-1 container mx-auto px-4 py-8 max-w-4xl">
-    {{ content | safe }}
+  <main class="flex-1 manual-stage px-4 py-8 lg:py-12">
+    <div class="manual-wrapper mx-auto max-w-6xl lg:flex lg:gap-8">
+      <div class="manual-binder hidden lg:flex flex-col justify-around" aria-hidden="true">
+        {% for _ in [1,2,3,4] %}
+          <span class="manual-ring"></span>
+        {% endfor %}
+      </div>
+      <div class="manual-page w-full">
+        {{ content | safe }}
+      </div>
+    </div>
   </main>
 
   {% include "partials/footer.njk" %}
